# atlas-relocation-intelligence

./: .env.example  LICENSE  pyproject.toml
data/: cities.csv
infra/: docker-compose.yml
src/atlas_relocation_intelligence/: __init__.py  config.py  database.py  load_cities.py  load_weather.py  schema.py
src/atlas_relocation_intelligence/ingestion/: open_meteo.py
